tdf#157650 Unhelpful error when XML in content.xml is malformed

regression from
    commit d9e322d60f65ff20631dab87baa5a2c7c71daaa2
    replace ErrorInfo with simpler mechanism
we need to tunnel the necessary information through the uui stuff, so
add a new Exception class to do that.

Change-Id: Ie1fde486e8637b802340795348a5e5aad6a54e96
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157732
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>